--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\..\Visual Studio 2012\Projects\BillerV2\Biller.Core\packages.config" />
+  <repository path="..\..\..\..\Visual Studio 2012\Projects\BillerV2\Biller\packages.config" />
+  <repository path="..\..\..\..\Visual Studio 2012\Projects\BillerV2\OrderTypes-Biller\packages.config" />
   <repository path="..\ZUGFeRD@Biller\packages.config" />
 </repositories>
